# boolpack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: boolpack.pyx
